--- a/GawayzAdmin/WebAdmin/packages.config
+++ b/GawayzAdmin/WebAdmin/packages.config
@@ -40,6 +40,7 @@
   <package id="Owin" version="1.0" targetFramework="net452" />
   <package id="PagedList" version="1.17.0.0" targetFramework="net452" />
   <package id="PagedList.Mvc" version="4.5.0.0" targetFramework="net452" />
+  <package id="remarkable-bootstrap-notify" version="3.1.3" targetFramework="net452" />
   <package id="Respond" version="1.2.0" targetFramework="net452" />
   <package id="WebGrease" version="1.5.2" targetFramework="net452" />
 </packages>
