--- a/GawayzAdmin/DataAccess/DataAccess.csproj
+++ b/GawayzAdmin/DataAccess/DataAccess.csproj
@@ -53,6 +53,7 @@
     <Compile Include="Entities\Choices.cs" />
     <Compile Include="Entities\Companies.cs" />
     <Compile Include="Entities\Products.cs" />
+    <Compile Include="Entities\ProductsSurveyQuestions.cs" />
     <Compile Include="Entities\Questions.cs" />
     <Compile Include="Helpers.cs" />
     <Compile Include="Repositories\EfGenericRepository.cs" />
