--- a/GawayzAdmin/packages/repositories.config
+++ b/GawayzAdmin/packages/repositories.config
@@ -1,4 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <repositories>
+  <repository path="..\DataAccess\packages.config" />
+  <repository path="..\GawayzAdmin\packages.config" />
   <repository path="..\WebAdmin\packages.config" />
 </repositories>
