--- a/GawayzAdmin/DataAccess/DataAccess.csproj
+++ b/GawayzAdmin/DataAccess/DataAccess.csproj
@@ -9,8 +9,9 @@
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>DataAccess</RootNamespace>
     <AssemblyName>DataAccess</AssemblyName>
-    <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
+    <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -20,6 +21,7 @@
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+    <LangVersion>5</LangVersion>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>pdbonly</DebugType>
@@ -50,9 +52,12 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="DataContext.cs" />
+    <Compile Include="Entities\BusinessRules.cs" />
     <Compile Include="Entities\Choices.cs" />
     <Compile Include="Entities\Companies.cs" />
     <Compile Include="Entities\Products.cs" />
+    <Compile Include="Entities\ProductsBusinessRules.cs" />
+    <Compile Include="Entities\ProductsCodes.cs" />
     <Compile Include="Entities\ProductsSurveyQuestions.cs" />
     <Compile Include="Entities\Questions.cs" />
     <Compile Include="Entities\Users.cs" />
