--- a/GawayzAdmin/GawayzAdmin/GawayzAdmin.csproj
+++ b/GawayzAdmin/GawayzAdmin/GawayzAdmin.csproj
@@ -173,6 +173,7 @@
     <Compile Include="App_Start\BundleConfig.cs" />
     <Compile Include="App_Start\FilterConfig.cs" />
     <Compile Include="App_Start\RouteConfig.cs" />
+    <Compile Include="Controllers\AdsController.cs" />
     <Compile Include="Controllers\CodeController.cs" />
     <Compile Include="Controllers\CompanyController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
@@ -189,6 +190,7 @@
     <Compile Include="SecurityClasses\SecuredUser.cs" />
     <Compile Include="SecurityClasses\SessionManager.cs" />
     <Compile Include="SecurityClasses\StringCipher.cs" />
+    <Compile Include="ViewModels\AdsViewModel.cs" />
     <Compile Include="ViewModels\BusinessRulesViewModel.cs" />
     <Compile Include="ViewModels\ChoicesViewModel.cs" />
     <Compile Include="ViewModels\CodeViewModel.cs" />
@@ -221,6 +223,7 @@
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
     <Content Include="Global.asax" />
     <Content Include="Content\Site.css" />
+    <Content Include="Scripts\bootstrap-filestyle.min.js" />
     <Content Include="Scripts\bootstrap-multiselect.js" />
     <Content Include="Scripts\bootstrap-notify.js" />
     <Content Include="Scripts\bootstrap-notify.min.js" />
@@ -317,9 +320,15 @@
     <Content Include="Views\Code\Index.cshtml" />
     <Content Include="Views\Code\Create.cshtml" />
     <Content Include="Views\Code\_CodeList.cshtml" />
+    <Content Include="Views\Ads\_AdsList.cshtml" />
+    <Content Include="Views\Ads\Index.cshtml" />
+    <Content Include="Views\Ads\_Create.cshtml" />
+    <Content Include="Views\Ads\_Detail.cshtml" />
+    <Content Include="Views\Ads\_CreateOrEdit.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
+    <Folder Include="Content\Ads\" />
     <Folder Include="Models\" />
     <Folder Include="Views\Security\" />
   </ItemGroup>
